--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GUIA DO ALUNO</title>
   </head>
-  <body style="background-color: #66b9bf;">
+  <body>
   
     <div id="root"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
