--- a/src/container/Vagas/index.html
+++ b/src/container/Vagas/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teste</title>
+  <meta name="theme-color" content="#4abdac"/>
+  <title></title>
   
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../Vagas/Vagas.css">
 </head>
 <body>
   <div class="container">
     <h1 class="brand">PUBLICAR VAGAS</h1>     
       <div class="contact">
-        <form id="contactForm">
+        <form id="gda-vagas">
           <p>
             <label>Título da Publicação</label>
             <input type="text" name="name" id="name">
@@ -33,9 +34,9 @@
   </div>
   <div class="publi">
       <h2>VAGAS ADICIONADAS RECENTEMENTE</h2>
-      <div id="msg"></div>
+      <div id="msg"></div> 
 
   <script src="https://www.gstatic.com/firebasejs/7.19.0/firebase.js"></script> 
-  <script src="./main.js"></script>
+  <script src="./FirebaseVagas.js"></script>
 </body>
 </html>
