--- a/src/container/Mural/index.html
+++ b/src/container/Mural/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1 class="brand">CADASTRAR EVENTO</h1>     
       <div class="contact">
-        <form id="contactMural">
+        <form id="gda-mural">
           <p>
             <label>Título da Publicação</label>
             <input type="text" name="name" id="name">
